--- a/webapp/WEB-INF/conf/plugins/appointment-ants.properties
+++ b/webapp/WEB-INF/conf/plugins/appointment-ants.properties
@@ -6,3 +6,4 @@ ants.api.opt.get.status=https://api-coordination.rendezvouspasseport.ants.gouv.f
 ants.display.fieldsErrorMessage=Un ou plusieurs champs ont \u00e9t\u00e9 saisis incorrectement. Veuillez vous assurer de respecter le sch\u00e9ma d'\u00e9criture requis 
 ants.auth.token=x-rdv-opt-auth-token
 ants.session.attribute.name=APPOINTMENT_CODE_PREDEMANDE
+ants.ids_application.parameters=application_ids
