LUT26056 : clean code & correct fieldsErrorMessage

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages.properties
@@ -32,3 +32,6 @@ predemandeForm.erroMessage=The selectionned number of total persons must not bee
 appointmenttitresearch.form.legend=Welcome to the digital appointment booking service for obtaining an identity document (national identity card and/or passport).
 informations.message=We inform you that, given the current health situation, we are making every effort to offer the maximum number of appointments, but their availability may be disrupted.
 informations.conditions=To ensure that your appointment goes smoothly, we invite you to read the information on the dedicated <a href="https://www.paris.fr/\">paris.fr</a> page and prepare your application before making an appointment.
+appointmentantssearch.form.validate=validate the search
+display.fieldsErrorMessage=One or more fields have been incorrectly entered. Please ensure that you follow the required input template.
+error.page=One or more parameters are missing
