LUT-26412 : Correct display problems

--- a/webapp/WEB-INF/conf/plugins/appointment-ants.properties
+++ b/webapp/WEB-INF/conf/plugins/appointment-ants.properties
@@ -1,7 +1,7 @@
 appointment-ants.exclude.role=restricted
 
 ants.api.opt.auth.token=<Insert valid ANTS API Token>
-ants.api.opt.get.status=https://api-coordination.rendezvouspasseport.ants.gouv.fr/api/status?
+ants.api.opt.get.status=https://rdvmairie-optimisation-dev.osc-secnum-fr1.scalingo.io/api/status?
 ants.auth.token=x-rdv-opt-auth-token
 ants.session.attribute.name=APPOINTMENT_CODE_PREDEMANDE
 ants.ids_application.parameters=application_ids
