LUT-26397 : Implement the Access Controls for the ANTS

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages.properties
@@ -35,3 +35,5 @@ informations.conditions=To ensure that your appointment goes smoothly, we invite
 appointmentantssearch.form.validate=validate the search
 display.fieldsErrorMessage=One or more fields have been incorrectly entered. Please ensure that you follow the required input template.
 error.page=One or more parameters are missing
+
+accesscontrol.slotsNumberAccessController.name=Slots number
