--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <parent>
         <artifactId>lutece-global-pom</artifactId>
         <groupId>fr.paris.lutece.tools</groupId>
-        <version>6.0.0</version>
+        <version>6.1.0</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -33,6 +33,11 @@
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-httpaccess</artifactId>
             <version>[3.0.1-SNAPSHOT,)</version>
+        </dependency>
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>plugin-accesscontrol</artifactId>
+            <version>[1.0.2-SNAPSHOT,)</version>
         </dependency>
     </dependencies>
 
