--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>library-httpaccess</artifactId>
             <version>[3.0.1-SNAPSHOT,)</version>
         </dependency>
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>plugin-accesscontrol</artifactId>
+            <version>[1.0.2-SNAPSHOT,)</version>
+            <type>lutece-plugin</type>
+        </dependency>
     </dependencies>
 
     <properties>
