LUT-26621: Change labels

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages.properties
@@ -1,18 +1,18 @@
 pagePathLabel=
 pageTitle=
 
-predemandeserial.label_default=Pre-demande number *
-predemandeserial.label_1=Pre-demande number - First person *
-predemandeserial.label_2=Pre-demande number - Second person *
-predemandeserial.label_3=Pre-demande number - Third person *
-predemandeserial.label_4=Pre-demande number - Fourth person *
-predemandeserial.label_5=Pre-demande number - Fifth person *
-predemandeserial.label_6=Pre-demande number - Sixth person *
+predemandeserial.label_default=Pre-demand number *
+predemandeserial.label_1=Pre-demand number - First person *
+predemandeserial.label_2=Pre-demand number - Second person *
+predemandeserial.label_3=Pre-demand number - Third person *
+predemandeserial.label_4=Pre-demand number - Fourth person *
+predemandeserial.label_5=Pre-demand number - Fifth person *
+predemandeserial.label_6=Pre-demand number - Sixth person *
 
 predemandenumber.label=Number of people concerned *
 
 predemandenumber.help=Number of people included in an ID card and/or passport application (maximum 6 people)
-predemandeserial.help=Valid number obtained from
+predemandeserial.help=Obtained from
 
 predemandeForm.inputElementType=text
 predemandeForm.inputElementNameSuffix=predemande_code_
@@ -28,12 +28,13 @@ predemandeForm.antsLink=https://ants.gouv.fr
 predemandeForm.firstPartAntsPlatformLink=<a href="
 predemandeForm.lastPartAntsPlatformLink=">ants.gouv.fr</a>
 predemandeForm.erroMessage=The selectionned number of total persons must not been greather then 6
+predemandeForm.customValidityMessage=Please enter your code consisting of 10 characters in digits and uppercase letters.
 
 appointmenttitresearch.form.legend=Welcome to the digital appointment booking service for obtaining an identity document (national identity card and/or passport).
 informations.message=We inform you that, given the current health situation, we are making every effort to offer the maximum number of appointments, but their availability may be disrupted.
 informations.conditions=To ensure that your appointment goes smoothly, we invite you to read the information on the dedicated <a href="https://www.paris.fr/\">paris.fr</a> page and prepare your application before making an appointment.
 appointmentantssearch.form.validate=validate the search
-display.fieldsErrorMessage=One or more fields have been incorrectly entered. Please ensure that you follow the required input template.
+display.fieldsErrorMessage=The pre-demand number is not valid or has already been used. Please enter it again
 error.page=One or more parameters are missing
 
 accesscontrol.slotsNumberAccessController.name=Slots number
