--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <version>[1.0.2-SNAPSHOT,)</version>
             <type>lutece-plugin</type>
         </dependency>
+        <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>plugin-appointment</artifactId>
+            <version>[3.0.7-SNAPSHOT,)</version>
+            <type>lutece-plugin</type>
+        </dependency>
     </dependencies>
 
     <properties>
