LUT-26733: change predemandenumber.help label

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages.properties
@@ -11,7 +11,7 @@ predemandeserial.label_6=Pre-demand number - Sixth person *
 
 predemandenumber.label=Number of people concerned *
 
-predemandenumber.help=Number of people included in an ID card and/or passport application (maximum 6 people)
+predemandenumber.help=Indicate the number of people who want to book an appointment (maximum 6)
 predemandeserial.help=Obtained from
 
 predemandeForm.inputElementType=text
