LUT-26732: Implementation of a check to make sure the ANTS application numbers entered by the user are unique

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages.properties
@@ -35,6 +35,7 @@ informations.message=We inform you that, given the current health situation, we 
 informations.conditions=To ensure that your appointment goes smoothly, we invite you to read the information on the dedicated <a href="https://www.paris.fr/\">paris.fr</a> page and prepare your application before making an appointment.
 appointmentantssearch.form.validate=validate the search
 display.fieldsErrorMessage=The pre-demand number is not valid or has already been used. Please enter it again
+display.predemandeCodesNotUniqueErrorMessage=A pre-demande number can't be used multiple times
 error.page=One or more parameters are missing
 
 accesscontrol.slotsNumberAccessController.name=Slots number
