--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <groupId>fr.paris.lutece.plugins</groupId>
     <artifactId>module-appointment-ants</artifactId>
     <packaging>lutece-plugin</packaging>
-    <version>1.0.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>Lutece appointment ants module</name>
 
     <repositories>
@@ -51,14 +51,14 @@
     <properties>
         <componentName>appointment-ants</componentName>
         <jiraProjectName>APPOINTMENT-ANTS</jiraProjectName>
-        <jiraComponentId/>
+        <jiraComponentId />
     </properties>
 
     <scm>
         <connection>scm:git:https://github.com/lutece-secteur-public/gru-module-appointment-ants.git</connection>
         <developerConnection>scm:git:https://github.com/lutece-secteur-public/gru-module-appointment-ants.git</developerConnection>
         <url>https://github.com/lutece-secteur-public/gru-module-appointment-ants.git</url>
-        <tag>HEAD</tag>
+        <tag>module-appointment-ants-1.0.0</tag>
     </scm>
 
 </project>
