--- a/webapp/WEB-INF/conf/plugins/appointment-ants.properties
+++ b/webapp/WEB-INF/conf/plugins/appointment-ants.properties
@@ -3,3 +3,8 @@ ants.api.opt.get.status=https://rdvmairie-optimisation-dev.osc-secnum-fr1.scalin
 ants.auth.token=x-rdv-opt-auth-token
 ants.session.attribute.name=APPOINTMENT_CODE_PREDEMANDE
 ants.ids_application.parameters=application_ids
+
+#Time during which the client waits for a response after establishing connection (in milliseconds) - optional
+ants.api.socketTimeout=10000
+#Time during which client tries to connect to the server (in milliseconds) - optional
+ants.api.connectionTimeout=10000
