LUT-27613 : Add ANTS token configuration to site properties

--- a/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages.properties
+++ b/src/java/fr/paris/lutece/plugins/appointment/modules/ants/resources/ants_messages.properties
@@ -19,3 +19,8 @@ display.fieldsErrorMessage=The pre-demand number is not valid or has already bee
 display.predemandeCodesNotUniqueErrorMessage=A pre-demande number can't be used multiple times
 
 accesscontrol.slotsNumberAccessController.name=Slots number
+
+site_properties.name=Ants properties
+site_properties.description=Specific editable properties of ANTS
+site_property.token=ANTS API Token
+site_property.token.help=Insert valid ANTS API Token
