LUT-29464: Generate and add the 'meeting_point_id' as a parameter in the ANTS REST calls

--- a/webapp/WEB-INF/conf/plugins/appointment-ants.properties
+++ b/webapp/WEB-INF/conf/plugins/appointment-ants.properties
@@ -2,6 +2,7 @@ ants.api.opt.get.status=https://rdvmairie-optimisation-dev.osc-secnum-fr1.scalin
 ants.auth.token=x-rdv-opt-auth-token
 ants.session.attribute.name=APPOINTMENT_CODE_PREDEMANDE
 ants.ids_application.parameters=application_ids
+ants.meeting_point_id.parameters=meeting_point_id
 
 #Time during which the client waits for a response after establishing connection (in milliseconds) - optional
 ants.api.socketTimeout=10000
