LUT-29969: Use a default 'meeting_point_id' for ANTS REST calls

--- a/webapp/WEB-INF/conf/plugins/appointment-ants.properties
+++ b/webapp/WEB-INF/conf/plugins/appointment-ants.properties
@@ -4,6 +4,9 @@ ants.session.attribute.name=APPOINTMENT_CODE_PREDEMANDE
 ants.ids_application.parameters=application_ids
 ants.meeting_point_id.parameters=meeting_point_id
 
+#Default 'meeting_point_id' value to use when it can't be generated (pattern: <lutece-instance>_<resource-id>_<resource-type>)
+ants.meeting_point_id.defaultValue=Ville de Paris
+
 #Time during which the client waits for a response after establishing connection (in milliseconds) - optional
 ants.api.socketTimeout=10000
 #Time during which client tries to connect to the server (in milliseconds) - optional
