--- a/pom.xml
+++ b/pom.xml
@@ -26,24 +26,24 @@
         <dependency>
             <groupId>fr.paris.lutece</groupId>
             <artifactId>lutece-core</artifactId>
-            <version>[7.0.9,)</version>
+            <version>7.0.12</version>
             <type>lutece-core</type>
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-httpaccess</artifactId>
-            <version>[3.0.1,)</version>
+            <version>3.0.1</version>
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-accesscontrol</artifactId>
-            <version>[1.0.2,)</version>
+            <version>1.0.2</version>
             <type>lutece-plugin</type>
         </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>plugin-appointment</artifactId>
-            <version>[3.0.7,)</version>
+            <version>3.0.8</version>
             <type>lutece-plugin</type>
         </dependency>
     </dependencies>
