--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,12 @@
             <version>7.0.12</version>
             <type>lutece-core</type>
         </dependency>
+         <dependency>
+            <groupId>fr.paris.lutece.plugins</groupId>
+            <artifactId>library-signrequest</artifactId>
+            <version>3.0.0</version>
+            <type>jar</type>
+        </dependency>
         <dependency>
             <groupId>fr.paris.lutece.plugins</groupId>
             <artifactId>library-httpaccess</artifactId>
